[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-many-instance-attributes",
    "too-few-public-methods",
]
enable = ["unidiomatic-typecheck", ]
max-line-length=120

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "PL", "W", "ASYNC", "A", "DTZ", "G", "T20", "RET", "RUF", "TCH", "S", "B", "C90", "T10", "N", "PERF", "UP", "SLF", "TID", "TCH"]
ignore = ["PLR0913", "C901", "S101"]
line-length = 120
target-version = "py311"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
]
